<resources>
    <string name="def_login"></string>
    <string name="def_password"></string>
    <string name="app_name">IboxTestApp</string>
    <string name="action_settings">Settings</string>
    <string name="sdcard_needed">Вставьте SD карту</string>
    <string name="progress">Подождите&#8230;</string>
    <string name="month_last_day">Последний день месяца</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="success">Успешно!</string>
    <string name="failed">Неудачно!</string>
    <string name="common_continue">Продолжить</string>
    <string name="common_error">Произошла ошибка</string>
    <string name="writing_error">Ошибка записи</string>
    <string name="error_no_response">Сервер не отвечает</string>
    <string name="error_schedule_creation">Ошибка создания расписания\n(%s)\nПовторить попытку?</string>
    <string name="error_cancellation_timeout">Невозможно выполнить отмену, провести возврат?</string>
    <string name="error_no_such_transaction">Транзакция не найдена</string>
    <string name="error_tr_null_or_empty">Ошибка создания транзакции</string>
    <string name="error_invalid_input_type">Неправильный тип ввода</string>
    <string name="error_invalid_amount">Неправильная сумма</string>
    <string name="error_standalone_format">Ошибка устройства (%s)</string>
    <string name="error_ext_app_format">Ошибка приложения (%s)</string>
    <string name="tab_payment">Платеж</string>
    <string name="tab_history">История</string>
    <string name="tab_settings">Настройки</string>
    <string name="tab_cards">Карты</string>
    <string name="tab_mifare">Разное</string>
    <string name="login_dlg_title">Авторизация</string>
    <string name="login_dlg_btn_ok">Вход</string>
    <string name="login_dlg_lbl_login">Логин</string>
    <string name="login_dlg_lbl_password">Пароль</string>
    <string name="tr_details_dlg_lbl_operation">Операция:</string>
    <string name="tr_details_dlg_lbl_state">Состояние:</string>
    <string name="tr_details_dlg_lbl_id">ID транзакции:</string>
    <string name="tr_details_dlg_lbl_invoice">Номер чека:</string>
    <string name="tr_details_dlg_lbl_extid">ExtID:</string>
    <string name="tr_details_dlg_lbl_exttrandata">ExtTranData:</string>
    <string name="tr_details_dlg_lbl_appcode">Код подтверждения:</string>
    <string name="tr_details_dlg_lbl_terminal">Терминал:</string>
    <string name="tr_details_dlg_lbl_iin">IIN карты:</string>
    <string name="tr_details_dlg_lbl_pan">Номер карты:</string>
    <string name="tr_details_dlg_lbl_pan_full">Номер карты(полный):</string>
    <string name="tr_details_dlg_lbl_track2">Track2:</string>
    <string name="tr_details_dlg_lbl_link">Ссылка для оплаты:</string>
    <string name="tr_details_dlg_lbl_emv">Данные EMV:</string>
    <string name="tr_details_dlg_lbl_signature">Необходима подпись:</string>
    <string name="tr_details_dlg_lbl_auxdata">Позиции:</string>
    <string name="tr_details_btn_adjust">Отправить чек</string>
    <string name="tr_details_btn_fiscal_status">Проверить фискальный статус</string>
    <string name="tr_details_dlg_btn_fiscalize">Дофискализировать</string>
    <string name="history_edt_getById">Найти транзакцию по ID</string>
    <string name="history_item_no_description">Нет описания</string>
    <string name="history_item_inprocess">В обработке</string>
    <string name="history_tr_details_dlg_lbl_id">ID:</string>
    <string name="history_tr_details_dlg_lbl_date">Дата выполнения:</string>
    <string name="history_tr_details_dlg_lbl_title">Описание:</string>
    <string name="history_tr_details_dlg_lbl_amount">Сумма:</string>
    <string name="history_tr_details_dlg_lbl_amount_eff">Остаток:</string>
    <string name="history_tr_details_dlg_lbl_paytype">Способ оплаты:</string>
    <string name="history_tr_details_dlg_lbl_pan">Номер карты:</string>
    <string name="history_tr_details_dlg_lbl_state">Статус:</string>
    <string name="history_tr_details_dlg_lbl_fiscal_status">Фискальный статус:</string>
    <string name="history_tr_details_dlg_lbl_invoice">Номер чека:</string>
    <string name="history_tr_details_dlg_lbl_extid">ExtID:</string>
    <string name="history_tr_details_dlg_lbl_exttrandata">ExtTranData:</string>
    <string name="history_tr_details_dlg_lbl_geodata">Координаты:</string>
    <string name="history_tr_details_dlg_lbl_signature_url">Подпись:</string>
    <string name="history_tr_details_dlg_lbl_photo_url">Приложенное изображение:</string>
    <string name="history_tr_details_dlg_btn_invoice">Показать чек</string>
    <string name="history_tr_details_dlg_btn_cancel">Отмена платежа</string>
    <string name="history_tr_details_dlg_btn_return">Возврат платежа</string>
    <string name="payment_lbl_client_product_code">Client product code:</string>
    <string name="payment_lbl_ext_id">ExtId:</string>
    <string name="payment_lbl_ext_trandata">ExtTranData:</string>
    <string name="payment_lbl_fiscal_route">Fiscal route:</string>
    <string name="payment_lbl_amount">Сумма :</string>
    <string name="payment_lbl_description">Описание :</string>
    <string name="payment_rb_card">Картой</string>
    <string name="payment_rb_cash">Наличными</string>
    <string name="payment_rb_credit">Кредит</string>
    <string name="payment_rb_link">Ссылкой</string>
    <string name="payment_rb_linked_card_format">Привязанной картой %s</string>
    <string name="payment_rb_outer">Внешней картой</string>
    <string name="payment_rb_prepay">Предоплатой</string>
    <string name="payment_rb_other">Другое</string>
    <string name="payment_cb_autonfc">Auto NFC (Только Р17)</string>
    <string name="payment_cb_deferred">Отложенный платеж (Только Р17)</string>
    <string name="payment_cb_suppress_signature">Подпись не будет отправлена</string>
    <string name="payment_cb_skip_fiscalization">Не фискализировать</string>
    <string name="payment_cb_product">Оплатить продукт</string>
    <string name="payment_lbl_product_field_1">Поле 1 :</string>
    <string name="payment_lbl_product_field_2">Поле 2 :</string>
    <string name="payment_cb_regular">Регулярный платеж</string>
    <string name="payment_cb_aux_purchases">Aux товары</string>
    <string name="payment_cb_aux_tags">Aux теги на чек</string>
    <string name="payment_cb_end_type">Завершать по количеству повторов</string>
    <string name="payment_lbl_type">Тип платежа :</string>
    <string name="payment_lbl_start">Дата начала :</string>
    <string name="payment_lbl_end">Дата завершения :</string>
    <string name="payment_lbl_repeat_count">Число повторов :</string>
    <string name="payment_lbl_quarter_month">Месяц квартала :</string>
    <string name="payment_lbl_month">Месяц :</string>
    <string name="payment_lbl_day">День :</string>
    <string name="payment_lbl_day_of_week">День недели :</string>
    <string name="payment_lbl_dates">Выбранные дни :</string>
    <string name="payment_lbl_hour">Час :</string>
    <string name="payment_lbl_minute">Минута :</string>
    <string-array name="regular_payment_types">
        <item>Разовый</item>
        <item>Еженедельный</item>
        <item>Ежемесячный</item>
        <item>Ежеквартальный</item>
        <item>Ежегодный</item>
        <item>В заданные даты</item>
    </string-array>
    <string name="payment_default_dates">01.01.2016;02.02.2016;03.03.2016;</string>
    <string name="payment_dlg_product_btn_prepare">Заполнить</string>
    <string name="payment_toast_amount_prepared">Сумма изменена согласно продукту</string>
    <string name="payment_toast_receipt_prepared">Данные для отправки чека изменены согласно продукту</string>
    <string name="payment_toast_pin_request">Введите PIN</string>
    <string name="payment_toast_pin_entered">PIN введен</string>
    <string name="payment_toast_battery_format">Уровень заряда: %.0f%%</string>
    <string name="payment_toast_error_field_format">Неправильное значение поля %1$s</string>
    <string name="payment_btn_pay">Оплатить</string>
    <string name="payment_btn_pay_nfc">Оплатить NFC</string>
    <string name="payment_btn_credit_voucher">Кредит-ваучер</string>
    <string name="payment_btn_fiscal">Фискализировать</string>
    <string name="payment_btn_pay_background">Оплатить (фон)</string>
    <string name="payment_photo_dlg_title">Добавление изображения</string>
    <string name="payment_photo_dlg_msg">Выберите источник изображения</string>
    <string name="payment_photo_dlg_btn_gallery">Галерея</string>
    <string name="payment_photo_dlg_btn_camera">Камера</string>
    <string name="payment_dlg_started">Выполняется транзакция %s</string>
    <string name="payment_dlg_reverse_started">Отмена/возврат транзакции %s</string>
    <string name="payment_dlg_canceled">Платеж отменен</string>
    <string name="reverse_dlg_title">Возврат/Отмена платежа</string>
    <string name="reverse_dlg_lbl_amount">Сумма возврата/отмены:</string>
    <string name="steps_dlg_lbl_title">Подтвердите расписание</string>
    <string name="steps_dlg_lbl_total">Всего :</string>
    <string name="adjust_dlg_title">Отправка чека</string>
    <string name="adjust_dlg_lbl_signature">Подпись</string>
    <string name="adjust_dlg_lbl_email">Email :</string>
    <string name="adjust_dlg_lbl_phone">Телефон :</string>
    <string name="adjust_dlg_btn_send">Отправить чек</string>
    <string name="adjust_dlg_error">Необходимо выполнить подпись или указать email или телефон!</string>
    <string name="fiscal_dlg_title">Фискализация</string>
    <string name="fiscal_dlg_lbl_trid">@string/tr_details_dlg_lbl_id</string>
    <string name="fiscal_dlg_lbl_printer">ID принтера</string>
    <string name="fiscal_dlg_lbl_doc">Номер документа</string>
    <string name="fiscal_dlg_lbl_cvc">КПК</string>
    <string name="fiscal_dlg_lbl_shift">Номер смены</string>
    <string name="linked_dlg_title">Выберите карту</string>
    <string name="linked_dlg_empty">Нет привязанных карт</string>
    <string name="cards_btn_add">Добавить</string>
    <string name="cards_btn_add_deferred">Добавить отложенно (Только Р17)</string>
    <string name="cards_btn_refresh">Обновить</string>
    <string name="cards_btn_balance">Баланс</string>
    <string name="cards_dlg_balance_result_format">Баланс составляет %.2f</string>
    <string name="cards_btn_activate">Активировать подарочную карту</string>
    <string name="cards_btn_deactivate">Деактивировать подарочную карту</string>
    <string name="cards_dlg_remove_format">Удалить карту %s?</string>
    <string name="settings_lbl_title">Выберите ридер</string>
    <string name="settings_btn_autoconfig">Автонастройка</string>
    <string name="settings_btn_settlement">Сверка</string>
    <string name="settings_btn_unattended">Автономный режим</string>
    <string name="settings_btn_softpos_reg_check">Проверить регистрацию SOFTPOS</string>
    <string name="settings_btn_softpos_reg">Регистрация SOFTPOS</string>
    <string name="settings_cb_softpos_reg_force">Принудительно</string>
    <string name="settings_btn_softpos_remove_acc">Удалить аккаунт SOFTPOS</string>
    <string name="settings_autoconfig_default">Конфигурация по умолчанию</string>
    <string name="reader_state_disconnected">Ридер не подключен</string>
    <string name="reader_state_ready_multiinput">Проведите магнитной полосой или приложите карту, или вставьте карту в ридер</string>
    <string name="reader_state_ready">Проведите магнитной полосой или вставьте карту в ридер</string>
    <string name="reader_state_ready_swipeonly">Проведите магнитной полосой</string>
    <string name="reader_state_ready_nfconly">Приложите карту</string>
    <string name="reader_state_ready_emvonly">Вставьте карту</string>
    <string name="reader_state_ready_emv_or_tap">Вставьте или приложите карту</string>
    <string name="reader_state_init">Инициализация ридера</string>
    <string name="reader_state_inprogress">Выполняется платеж</string>
</resources>