<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:paddingTop="20dp"
	android:paddingBottom="20dp"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:orientation="vertical"
	>
	<TextView
		android:id="@+id/settings_lbl_title"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:text="@string/settings_lbl_title"
		android:layout_alignParentTop="true"
		/>
	<ListView
		android:id="@+id/settings_lv_readers"
		android:layout_height="350dp"
		android:layout_width="match_parent"
		android:layout_marginTop="20dp"
		android:scrollbarStyle="outsideOverlay"
		android:listSelector="#00000000"
		android:layout_below="@id/settings_lbl_title"
		android:layout_above="@+id/settings_ll_buttons"
		/>
	<LinearLayout
		android:id="@+id/settings_ll_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:id="@+id/settings_btn_autoconfig"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_autoconfig"
			/>
		<Button
			android:id="@+id/settings_btn_settlement"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_settlement"
			/>
		<Button
			android:id="@+id/settings_btn_unattended"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_unattended"
			/>
		<Button
			android:id="@+id/settings_btn_softpos_reg_check"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_softpos_reg_check"
			/>
		<Button
			android:id="@+id/settings_btn_softpos_reg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_softpos_reg"
			/>
		<Button
			android:id="@+id/settings_btn_softpos_remove_acc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/settings_btn_softpos_remove_acc"
			/>
	</LinearLayout>
</RelativeLayout>