<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:fadeScrollbars="false"
    >
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#000000">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_id"
            />

        <EditText
            android:id="@+id/history_tr_details_dlg_lbl_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:background="@null"
            />

        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_date"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_title"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_amount"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_amount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_amount_eff"
            />

        <TextView
            android:id="@+id/history_tr_details_dlg_lbl_amount_eff"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />

        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_paytype"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_paytype"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_pan"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_pan"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/tr_details_dlg_lbl_link"
            />

        <TextView
            android:id="@+id/history_tr_details_dlg_lbl_link"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            android:autoLink="web"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_state"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_state"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_fiscal_status"
            />

        <TextView
            android:id="@+id/history_tr_details_dlg_lbl_fiscal_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />

        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_invoice"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_invoice"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_geodata"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_geodata"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_signature_url"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_signature_url"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            android:autoLink="web"
            />
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:text="@string/history_tr_details_dlg_lbl_photo_url"
            />
        
        <TextView 
            android:id="@+id/history_tr_details_dlg_lbl_photo_url"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#aaaaaa"
            android:autoLink="web"
            />

        <Button
            android:id="@+id/history_tr_details_dlg_btn_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_tr_details_dlg_btn_invoice"
            />

        <Button
            android:id="@+id/history_tr_details_dlg_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_tr_details_dlg_btn_cancel"
            />

        <Button
            android:id="@+id/history_tr_details_dlg_btn_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_tr_details_dlg_btn_return"
            />


    </LinearLayout>
    
</ScrollView>